<resources>
    <string name="app_name" translatable="false">CST2335 Lab 4</string>
    <string name="hello_world">Hello World</string>
    <string name="button_text">I\'m a button!</string>
    <string name="love_android">I love Android</string>
    <string name="on_off_switch">Switch on/off</string>
    <string name="press_me">Press Me</string>
    <string name="checkbox">Check this out!</string>
    <string name="toast_message">Label has been updated.</string>
    <string name="snackbar_message">The checkbox is now\ </string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="undo">Undo</string>
    <string name="enter_name">Enter your name</string>
    <string name="next">Next</string>
    <string name="welcome">Welcome!</string>
    <string name="wrong_name">Don\'t call me that</string>
    <string name="thank_you">Thank you</string>
    <string name="type_here">Type Here</string>
    <string name="urgent">Urgent</string>
    <string name="add">Add</string>
</resources>