<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NameActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/welcomeText"
        android:hint="@string/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/negativeResponseButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/wrong_name" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/thankYouButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/thank_you" />
    </LinearLayout>

</LinearLayout>