<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/love_android"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/switch1"
        app:layout_constraintEnd_toStartOf="@+id/american_flag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/american_flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/flag"
        app:layout_constraintStart_toEndOf="@+id/text1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/checkbox1"
        app:layout_constraintTop_toTopOf="parent"/>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_off_switch"
        app:layout_constraintBottom_toTopOf="@+id/empty_space1"
        app:layout_constraintEnd_toStartOf="@+id/american_flag"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1" />

    <Space
        android:id="@+id/empty_space1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/press_me_button"
        app:layout_constraintEnd_toStartOf="@+id/american_flag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1"/>

    <Button
        android:id="@+id/press_me_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/press_me"
        android:layout_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/empty_space"
        app:layout_constraintBottom_toTopOf="@+id/edit_text"
        app:layout_constraintTop_toBottomOf="@+id/american_flag" />

    <Space
        android:id="@+id/empty_space"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:layout_constraintStart_toEndOf="@+id/press_me_button"
        app:layout_constraintEnd_toStartOf="@+id/checkbox1"
        app:layout_constraintBottom_toTopOf="@+id/edit_text"
        app:layout_constraintTop_toBottomOf="@+id/american_flag" />

    <CheckBox
        android:id="@+id/checkbox1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/checkbox"
        android:layout_weight="1"
        app:layout_constraintStart_toEndOf="@+id/empty_space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edit_text"
        app:layout_constraintTop_toBottomOf="@+id/american_flag" />

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/love_android"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/press_me_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>